# Generative-Art

./: .gitmodules  CMakeLists.txt  Makefile  README.md
includes/: interactions.h  kernel.h
src/: kernel.cu  main.cpp
